# uncertainty-estimation-mqcnn

./: README.md  pyproject.toml
notebooks/: 02_favorita_training_on_paper_parameters_mqcnn.ipynb  02_rossmann_training_on_parameters_onlyMQCNNV0.2.ipynb
uncertainty_estimation_mqcnn/: __init__.py  constants.py  uncertainty_estimation_models.py
